# robotvision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: debug.h  gearbox.h  std.h
src/: debug.cpp  gearbox.cpp  main.cpp
